--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -11,5 +11,10 @@
   </head>
   <body>
     <h1>Weekend Challenge 2</h1>
+    <button id="sigmaRoster">Next</button>
+    <div id="sigma-container"></div>
+    <div class="studentSelector">
+
+    </div>
   </body>
 </html>
