--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -11,10 +11,11 @@
   </head>
   <body>
     <h1>Weekend Challenge 2</h1>
-    <button id="sigmaRoster">Next</button>
-    <div id="sigma-container"></div>
-    <div class="studentSelector">
-
+    <div id="sigma-container">
+      <h2>Chris Mattox</h2>
+      <a href="https://github.com/ChrisMattox">Check out my Github!</a>
+      <p>Thank you to everyone in Sigma! My cohort members continue to be a wonderful resource to learn from, as well as inspiring me to continue growing my skillz as a budding developer. Also, the instructors, I guess :/ Luke is cool, but I don't know about that Kris guy...</p>
     </div>
+    <button id="next">Next</button>
   </body>
 </html>
