previous button working

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -17,5 +17,6 @@
       <p>Thank you to everyone in Sigma! My cohort members continue to be a wonderful resource to learn from, as well as inspiring me to continue growing my skillz as a budding developer. Also, the instructors, I guess :/ Luke is cool, but I don't know about that Kris guy...</p>
     </div>
     <button id="next">Next</button>
+    <button id="previous">Previous</button>
   </body>
 </html>
