so close, yet so ugly

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -15,8 +15,9 @@
       <h2>Chris Mattox</h2>
       <a href="https://github.com/ChrisMattox">Check out my Github!</a>
       <p>Thank you to everyone in Sigma! My cohort members continue to be a wonderful resource to learn from, as well as inspiring me to continue growing my skillz as a budding developer. Also, the instructors, I guess :/ Luke is cool, but I don't know about that Kris guy...</p>
+      <button id="previous">Previous</button>
+      <button id="next">Next</button>
     </div>
-    <button id="next">Next</button>
-    <button id="previous">Previous</button>
+    <div id="classIndex"></div>
   </body>
 </html>
