--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -2,6 +2,17 @@ h1{
   text-align: center;
 }
 
-.sigma-container{
-
+#sigma-container{
+  text-align: center;
+  width: 800px;
+  margin: 0 auto;
+}
+#classIndex{
+  width: 675px;
+  margin: 20px auto;
+}
+.stuff {
+  height: 35px;
+  width: 35px;
+  display: inline-block;
 }
