--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,18 +1,21 @@
-h1{
-  text-align: center;
+body{
+  width: 100%;
 }
-
+#index0{
+  background-color: cyan;
+}
 #sigma-container{
   text-align: center;
-  width: 800px;
+  width: 50%;
   margin: 0 auto;
 }
 #classIndex{
-  width: 675px;
-  margin: 20px auto;
+  width: 30%;
+  margin: 0 auto;
 }
 .stuff {
-  height: 35px;
-  width: 35px;
-  display: inline-block;
+  height: 20px;
+  width: 20px;
+  text-align: center;
+  display: inline-block;;
 }
