--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -1,8 +1,13 @@
 body{
   width: 100%;
+  background-color: teal;
+}
+button{
+  background-color: grey;
+  border-radius: 10px;
 }
 #index0{
-  background-color: cyan;
+  background-color: grey;
 }
 #sigma-container{
   text-align: center;
@@ -17,5 +22,6 @@ body{
   height: 20px;
   width: 20px;
   text-align: center;
-  display: inline-block;;
+  display: inline-block;
+  border-radius: 5px;
 }
